# PongOnline

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  com.onlinepong.Client.yml  template.html
client/: CMakeLists.txt
client/src/: app.cpp  app.h  config.h  main.cpp  net.cpp  net.h  render.cpp  render.h  storage.cpp  storage.h  ui.cpp  ui.h
client/src/webrtc/: transport_native.cpp  transport_wasm.cpp
cmake/: deps.cmake  download_if_missing.cmake
shared/: CMakeLists.txt
shared/include/pong/: codec.h  messages.h  role.h  sim.h  transport.h
signaling/: CMakeLists.txt
signaling/src/: main.cpp
